--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==9.0.1
+astroid==2.5.1
 autopep8==1.5.6
+bidict==0.21.2
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -9,22 +11,33 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.8
+Flask-SocketIO==5.0.1
 future==0.18.2
 gevent==21.1.2
 greenlet==1.0.0
 idna==2.10
+isort==5.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lazy-object-proxy==1.5.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
+progress==1.5
 pycodestyle==2.7.0
+pylint==2.7.2
 PySocks==1.7.1
+python-dotenv==0.15.0
+python-engineio==4.1.0
+python-socketio==5.1.0
 pytz==2021.1
 requests==2.25.1
 requests-file==1.5.1
 six==1.15.0
 tldextract==3.1.0
 toml==0.10.2
+typed-ast==1.4.2
 urllib3==1.26.4
 Werkzeug==1.0.1
+wrapt==1.12.1
 zope.event==4.5.0
 zope.interface==5.3.0
