--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-SocketIO==5.0.1
 future==0.18.2
 gevent==21.1.2
 greenlet==1.0.0
+gunicorn==20.1.0
 idna==2.10
 isort==5.7.0
 itsdangerous==1.1.0
