--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cors==1.0.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.10
+Flask-DotEnv==0.1.2
 Flask-RESTful==0.3.8
 Flask-SocketIO==5.0.1
 future==0.18.2
