--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,11 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 cors==1.0.1
+dnspython==1.16.0
+eventlet==0.30.2
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.10
-Flask-DotEnv==0.1.2
 Flask-RESTful==0.3.8
 Flask-SocketIO==5.0.1
 future==0.18.2
