--- a/.ebextenstions/permission.config
+++ b/.ebextenstions/permission.config
@@ -1,5 +1,5 @@
-container_commands: 
+commands: 
     01_create_uploads_folder: 
         command: "mkdir -p /uploads/"
     02_set_folder_permission: 
-        command: "chmod 755 uploads/"
+        command: "chmod 755 /uploads/"
