--- a/.ebextenstions/permissions.config
+++ b/.ebextenstions/permissions.config
@@ -5,4 +5,4 @@ files:
     group: root
     content: |
       #!/usr/bin/env bash
-      chmod -R 777 /var/app/current/*
+      chmod -R 777 /var/app/current/
